<resources>
    <!-- app titles -->
    <string name="app_name">Popular Movies 2</string>

    <!-- Actionbar Items-->
    <string name="action_settings">Settings</string>
    <string name="action_all_movies">Refresh All</string>
    <string name="action_favorites">Refresh Favorites</string>
    <string name="action_share">Share Trailer</string>

    <!--  Settings -->
    <string name="title_activity_detail">Movie Details</string>
    <string name="pref_sort">Sort order</string>
    <string name="pref_sort_default">POPULARITY</string>
    <string name="pref_sort_summary">Sort in descending order by popularity or by user rating</string>

    <!-- Detail Fragment-->
    <string name="label_release_date">Released in</string>
    <string name="label_user_rating">Rating</string>
    <string name="label_favorite_checkbox">Favorite</string>
    <string name="label_trailer">Trailers</string>
    <string name="label_author">Author</string>
    <string name="label_reviews">Reviews</string>
    <string name="overview_placoholder">Armed with the astonishing ability to shrink in scale but increase in strength,
        con-man Scott Lang must embrace his inner-hero and help his mentor, Dr. Hank Pym, protect the secret behind his
        spectacular Ant-Man suit from a new generation of towering threats. Against seemingly insurmountable obstacles,
        Pym and Lang must plan and pull off a heist that will save the world.</string>

</resources>
